v10.0.0 (2023-09-06)
-------------------
[change] Upgrade tedious to v16 ([#1547](https://github.com/tediousjs/node-mssql/pull/1547))
[removed] Removed NodeJS 14 support ([#1547](https://github.com/tediousjs/node-mssql/pull/1547))

v9.3.2 (2023-09-06)
-------------------
[fix] Fix bug with msnodesqlv8 connection strings ((#1525)[https://github.com/tediousjs/node-mssql/pull/1525])

v9.3.1 (2023-09-05)
-------------------
Revoked - contained breaking changes

v9.3.0 (2023-09-04)
-------------------
[new] Add AAD connection support to connection strings ((#1461)[https://github.com/tediousjs/node-mssql/pull/1461])

v9.2.1 (2023-09-05)
-------------------
[fix] Fix bug with msnodesqlv8 connection strings ((#1525)[https://github.com/tediousjs/node-mssql/pull/1525])

v9.2.0 (2023-08-28)
-------------------
[new] Use @tediousjs/connection-string library to build msnodesqlv8 connection strings ((#1525)[https://github.com/tediousjs/node-mssql/pull/1525])

v9.1.3 (2023-08-08)
-------------------
[fix] Escape values that are added to the msnodesqlv8 connection string that we construct ((#1479)[https://github.com/tediousjs/node-mssql/pull/1479])

v9.1.2 (2023-08-01)
-------------------
[fix] Support more named instance formats ([#1520](https://github.com/tediousjs/node-mssql/pull/1520))
[refactor] Stop using deprecated regex symbols ([#1520](https://github.com/tediousjs/node-mssql/pull/1520))

v9.1.1 (2023-01-19)
-------------------
[revert] Add support for AAD authentication via connection string ((#1436)[https://github.com/tediousjs/node-mssql/pull/1436])

v9.1.0 (2023-01-17)
-------------------
[new] Add support for AAD authentication via connection string ((#1436)[https://github.com/tediousjs/node-mssql/pull/1436])
[docs] Update express example ((#1433)[https://github.com/tediousjs/node-mssql/pull/1433])

v9.0.1 (2022-08-18)
-------------------