@@ -47,6 +47,8 @@ class ConnectionPool extends BaseConnectionPool {
           return reject(err)
         }
 
+        tds.setUseNumericString(true)
+
         IDS.add(tds, 'Connection', connedtionId)
         tds.setUseUTC(this.config.options.useUTC)
         debug('connection(%d): established', IDS.get(tds))
