@@ -31,6 +31,7 @@ const castParameter = function (value, type) {
     case TYPES.NChar:
     case TYPES.Xml:
     case TYPES.Text:
+    case TYPES.BigInt:
     case TYPES.NText:
       if ((typeof value !== 'string') && !(value instanceof String)) {
         value = value.toString()
@@ -39,7 +40,6 @@ const castParameter = function (value, type) {
 
     case TYPES.Int:
     case TYPES.TinyInt:
-    case TYPES.BigInt:
     case TYPES.SmallInt:
       if ((typeof value !== 'number') && !(value instanceof Number)) {
         value = parseInt(value)
